Share/Contrib Folders

--- a/contrib/debian/manpages/darksilk-cli.1
+++ b/contrib/debian/manpages/darksilk-cli.1
@@ -1,12 +1,12 @@
-.TH DASH-CLI "1" "June 2016" "dash-cli 0.12"
+.TH DARKSILK-CLI "1" "November 2016" "darksilk-cli 1.0"
 .SH NAME
-dash-cli \- a remote procedure call client for Dash Core. 
+darksilk-cli \- a remote procedure call client for DarkSilk Core. 
 .SH SYNOPSIS
-dash-cli [options] <command> [params] \- Send command to Dash Core. 
+darksilk-cli [options] <command> [params] \- Send command to DarkSilk Core. 
 .TP
-dash-cli [options] help \- Asks Dash Core for a list of supported commands.
+darksilk-cli [options] help \- Asks DarkSilk Core for a list of supported commands.
 .SH DESCRIPTION
-This manual page documents the dash-cli program. dash-cli is an RPC client used to send commands to Dash Core.
+This manual page documents the darksilk-cli program. darksilk-cli is an RPC client used to send commands to DarkSilk Core.
 
 .SH OPTIONS
 .TP
