--- a/contrib/debian/manpages/darksilk-qt.1
+++ b/contrib/debian/manpages/darksilk-qt.1
@@ -1,4 +1,4 @@
-.TH DASH-QT "1" "June 2016" "dash-qt 0.12"
+.TH DARKSILK-QT "1" "November 2016" "darksilk-qt 1.0"
 .SH NAME
 dash-qt \- peer-to-peer network based digital currency
 .SH DESCRIPTION
