--- a/contrib/macdeploy/Base.lproj/InfoPlist.strings
+++ b/contrib/macdeploy/Base.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-{	CFBundleDisplayName = "Dash Core"; CFBundleName = "Dash Core"; }
+{	CFBundleDisplayName = "DarkSilk Core"; CFBundleName = "DarkSilk Core"; }
