--- a/contrib/debian/manpages/darksilkd.1
+++ b/contrib/debian/manpages/darksilkd.1
@@ -1,4 +1,4 @@
-.TH DASHD "1" "June 2016" "dashd 0.12"
+.TH DARKSILKD "1" "November 2016" "darksilkd 1.0"
 .SH NAME
 dashd \- peer-to-peer network based digital currency
 .SH SYNOPSIS
@@ -6,7 +6,7 @@ dashd [options] <command> [params]
 .TP
 dashd [options] help <command> \- Get help for a command
 .SH DESCRIPTION
-This  manual page documents the dashd program. Dash is an experimental new digital currency that enables anonymous, instant payments to anyone, anywhere in the world. Dash uses peer-to-peer technology to operate with no central authority: managing transactions and issuing money are carried out collectively by the network. Dash Core is the name of the open source software which enables the use of this currency.
+This  manual page documents the dashd program. DarkSilk is an experimental new digital currency that enables anonymous, instant payments to anyone, anywhere in the world. DarkSilk uses peer-to-peer technology to operate with no central authority: managing transactions and issuing money are carried out collectively by the network. DarkSilk Core is the name of the open source software which enables the use of this currency.
 
 .SH OPTIONS
 .TP
