--- a/contrib/debian/manpages/darksilkd.1
+++ b/contrib/debian/manpages/darksilkd.1
@@ -1,12 +1,12 @@
 .TH DARKSILKD "1" "November 2016" "darksilkd 1.0"
 .SH NAME
-dashd \- peer-to-peer network based digital currency
+darksilkd \- peer-to-peer network based digital currency
 .SH SYNOPSIS
-dashd [options] <command> [params]
+darksilkd [options] <command> [params]
 .TP
-dashd [options] help <command> \- Get help for a command
+darksilkd [options] help <command> \- Get help for a command
 .SH DESCRIPTION
-This  manual page documents the dashd program. DarkSilk is an experimental new digital currency that enables anonymous, instant payments to anyone, anywhere in the world. DarkSilk uses peer-to-peer technology to operate with no central authority: managing transactions and issuing money are carried out collectively by the network. DarkSilk Core is the name of the open source software which enables the use of this currency.
+This  manual page documents the darksilkd program. DarkSilk is an experimental new digital currency that enables anonymous, instant payments to anyone, anywhere in the world. DarkSilk uses peer-to-peer technology to operate with no central authority: managing transactions and issuing money are carried out collectively by the network. DarkSilk Core is the name of the open source software which enables the use of this currency.
 
 .SH OPTIONS
 .TP
@@ -22,7 +22,7 @@ List commands.
 Get help for a command.
 
 .SH "SEE ALSO"
-dash.conf(5)
+darksilk.conf(5)
 .SH AUTHOR
 This manual page was written by Micah Anderson <micah@debian.org> for the Debian system (but may be used by others). Permission is granted to copy, distribute and/or modify this document under the terms of the GNU General Public License, Version 3 or any later version published by the Free Software Foundation.
 
