Literally the last of Dash refs apart from Governance Draft Files

--- a/contrib/debian/manpages/darksilk-qt.1
+++ b/contrib/debian/manpages/darksilk-qt.1
@@ -1,13 +1,13 @@
 .TH DARKSILK-QT "1" "November 2016" "darksilk-qt 1.0"
 .SH NAME
-dash-qt \- peer-to-peer network based digital currency
+darksilk-qt \- peer-to-peer network based digital currency
 .SH DESCRIPTION
 .SS "Usage:"
 .IP
-dash\-qt [command\-line options]
+darksilk\-qt [command\-line options]
 .SH OPTIONS
 .TP
 \-?
 List options.
 .SH "SEE ALSO"
-dashd(1)
+darksilkd(1)
